add some logic in app script v.2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <title>Maditation App</title>
+    <title>Light Maditation App</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
         </div>
       </div>
 
-    <script src="./app.js"></script>
+<script src="app.js"></script>      
 </body>
 
 </html>
